<resources>
    <string name="app_name">GPS Ruler</string>
    <string name="point_a_label">Point A</string>
    <string name="get_position">Get Position</string>
    <string name="clear">Clr</string>
    <string name="stop">Stop</string>
    <string name="view_on_map">View on Map</string>
    <string name="point_b_label">Point B</string>
    <string name="coordinates">Coordinates</string>

</resources>
