<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:paddingVertical="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/statustextview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="40dp"
                android:text="Paused"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_a_label"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="0dp"
                android:paddingHorizontal="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/startAbutton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/get_position"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>
                <Button
                    android:id="@+id/clearAbutton"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/aposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="\n\n\n\n"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/point_b_label"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textSize="30dp"
                android:textColor="@color/colorPrimaryDark"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="0dp"
                android:paddingHorizontal="0dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/startBbutton"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/get_position"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@color/colorPrimary"
                    android:textColor="@android:color/white"/>
                <Button
                    android:id="@+id/clearBbutton"
                    android:layout_width="55dp"
                    android:layout_height="wrap_content"
                    android:text="@string/clear"
                    android:background="@color/colorAccent"
                    android:textColor="@android:color/white"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/bposition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="\n\n\n\n"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/stop"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/averagepos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Distance"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/mapbutton"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/view_on_map"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>